--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "homepage": "https://github.com/Kunune/prismagram#readme",
   "dependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/node": "^7.5.0",
+    "@babel/preset-env": "^7.5.4",
+    "dotenv": "^8.0.0",
     "graphql-yoga": "^1.18.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "nodemon": "^1.19.1"
   },
   "scripts": {
