--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "graphql-yoga": "^1.18.0",
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.34.1"
   },
   "devDependencies": {
